2/27/12 #3204, use plaintext (no html) for substance names in sim-sharing messages, to improve readability
2/27/12 #3204, sim-sharing for custom radio buttons in Game Settings panel
2/27/12 #3204, sim-sharing for game buttons
2/27/12 print reactions for each level via the Developer menu
2/2/12 sim-sharing: add all of the easy stuff for data collection
2/2/12 #3204, sim-sharing: replace odd user-component classes with enums and chaining
1/3/12 #3202, sim-sharing changes related to Swing controls
10/20/11 set game "Start" button color to yellow, to be consistent with "attention" color used through game
# 1.03.00 (52708) Jun 6, 2011
6/6/11 > added new translation credits features
# 1.02.02 (52602) Jun 2, 2011
2/16/11 #2727, rewrite GameSettings to use properties exclusively, remove old-style constructors and accessor methods
1/10/11 move IntegerSpinner to phetcommon
12/15/10 #2614, move license.txt files into image subdirectories
# 1.02.01 (47115) Dec 13, 2010
12/13/10 change points in game: +2 if correct on first try, +1 on second try
# 1.02.00 (45305) Oct 21, 2010
# 1.01.01 (45225) Oct 19, 2010
> move Game features and associated string translations to PhET common framework, for reuse in other sims
10/19/10 #2547, migrate Traditional Chinese (zh_TW) game strings to phetcommon
10/19/10 #2547, migrate Vietnamese (vi) game strings to phetcommon
10/19/10 #2547, migrate Serbian (sr) game strings to phetcommon
10/19/10 #2547, migrate Portuguese (pt) game strings to phetcommon
10/19/10 #2547, migrate Brazilian Portuguese (pt_BR) game strings to phetcommon
10/19/10 #2547, migrate Dutch (nl) game strings to phetcommon
10/19/10 #2547, migrate Korean (ko) game strings to phetcommon
10/19/10 #2547, migrate Hebrew (iw) game strings to phetcommon
10/19/10 #2547, migrate Persian (fa) game strings to phetcommon
10/19/10 #2547, migrate Spanish (es) game strings to phetcommon
10/19/10 #2547, migrate Greek (el) game strings to phetcommon